--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyGems/FormByMyGemName/FormMyGem.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyGems/FormByMyGemName/FormMyGem.scss
@@ -41,8 +41,21 @@
             flex-direction: column;
             & > select { margin: 2% auto; width: 80%; }
             & > button { margin: 2% auto; padding: 0.3rem 1rem; }
+        }
+    }
+}
 
-
+@media screen and (max-width: 200px) {
+    .myGems-form {
+        & > form > p { font-size: 16px; }
+        & > form > .form-group {
+            flex-direction: column;
+            & > select { margin: 2% auto; width: 100%; }
+            & > .gems { 
+                width: 100%;
+                margin: 5% auto; 
+                padding: 5% 0; 
+            }
         }
     }
 }
