--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/Footer/Footer.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/Footer/Footer.scss
@@ -210,6 +210,7 @@
 
 @media screen and (max-width: 213px) {
     .footer {
+        overflow: hidden;
         & .services .contacts div span,
         .services .links ul > li > a,
         .services .copyright div { font-size: 10px; }
@@ -258,6 +259,5 @@
                 }
             }
         }
-       
     }
 }
