--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/Model/Gem.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Gems/Model/Gem.scss
@@ -41,7 +41,7 @@
 
         & > .edit-button { 
             @include edit-button;
-            padding-right: 1rem;
+            margin-right: 1rem;
         }
         & > .details-button { @include details-button; }
     }
