--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/AdminOptions.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/AdminOptions.scss
@@ -11,7 +11,7 @@
 
     & > .inner-user-options {
         @include inner-template;
-        padding: 3%;
+        padding: 3% 3% 5% 3%;
         width: 83%;
         //overflow: hidden;
 
@@ -31,6 +31,15 @@
             padding-bottom: 1rem;
             color: #000;
             &:hover { color: #fff; }
+        }
+
+        & > .total-users {
+            padding: 1%;
+            color: #fff;
+            font-weight: bold;
+            float: right;
+            //position: relative;
+            text-shadow: 1px 1px rgb(0,0,0);
         }
     }
 }
