--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
@@ -6,26 +6,27 @@
     cursor: pointer;
     margin: 0 auto;
 
-    & > tbody > tr > td > .edit-user {
-       @include edit-button;
-       margin-right: 0.7rem;
+    & > tbody > tr > td > .info-user {
+        margin-right: 0.7rem;
+        font-size: 20px;
+        text-decoration: none;
+        &:hover { 
+           color: #fff; 
+           border-bottom: 1px solid #fff;
+           text-shadow: 1px 1px #158CBA;
+        }
     }
 
     & > tbody > tr > td > .delete-user {
-        cursor: pointer;
-        outline: none;
-        border: 1px solid #fff;
-        border-radius: 0.3rem;
-        padding: 0.3rem 1rem;
-        background: #F73F34;
-        color: #fff;
+        border: none;
+        background: none;
+        font-size: 20px;
         font-weight: bold;
-        margin-right: 0.7rem;
+        color: #F73F34;
         text-shadow: 1px 1px rgb(0,0,0);
         &:hover {
-            background: #fff;
-            color: #F73F34;
-            border-color: #F73F34;
+            color: #fff;
+            text-shadow: 1px 1px #F73F34;
         }
     }
 
