--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Jewels/EditJewel/EditJewel.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/Jewels/EditJewel/EditJewel.scss
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     padding-bottom: 1%;
     & > h2 { @include h2; padding-bottom: 0; }
-    & > h4 { @include h3; }
+    & > h4 { @include h3; color: goldenrod; }
 
     & > .inner-editJewel {
         @include form-template;
