--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyGems/MyGems.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/MyRoom/MyGems/MyGems.scss
@@ -6,14 +6,16 @@
     border-radius: 0.4rem;
     margin-bottom: 2.5rem;
     padding: 2%;
-    & > h2 { @include h4; }
+    background-color: rgba(0,0,0, 0.3);
+
+    & > h2 { @include h2; }
 
     & > .container-gems {
         & > .gems-ring,
         & > .gems-pendant,
         & > .gems-bracelet {
             width: 100%;
-            & > h3 { font-weight: bold; color: #fff; text-shadow: 2px 2px 1px rgb(0,0,0); }
+            & > h3 { font-weight: bold; color: #fff; text-shadow: 1px 1px 1px rgb(0,0,0); }
             & > h4 { text-shadow: 1px 1px rgb(0,0,0); color: goldenrod; }
 
             & > .gems-ring-list,
