--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/PublicJewels/EditPublicJewel/EditPublicJewel.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/PublicJewels/EditPublicJewel/EditPublicJewel.scss
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     padding: 1% 0;
     & > h2 { @include h2; padding-bottom: 0; }
-    & > h4 { @include h3; }
+    & > h4 { @include h3; color: goldenrod; }
 
     & > .inner-edit-publicJewel {
         @include form-template;
@@ -16,6 +16,7 @@
         border: 2px solid goldenrod;
         width: 63rem;
         height: 470px;
+        overflow: hidden;
 
         & > .image-view {
             & > h3 {  @include h3; margin-top: 50%; color: goldenrod; }
