--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/PublicJewels/Model/PublicJewelDetailsModel.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/PublicJewels/Model/PublicJewelDetailsModel.scss
@@ -8,6 +8,7 @@
     overflow: hidden;
     padding: 1% 0;
     margin-bottom: 11%;
+    background-color: rgba(0,0,0, 0.3);
    
     border-radius: 0.4rem;
     border: 2px solid #fff;
@@ -21,6 +22,6 @@
         box-shadow: 0px 0px 23px 0px rgba(0,0,0,0.95);
     }
 
-    & > h4 { @include h4; padding: 1% 0; }
+    & > h4 { @include h2; padding: 1% 0; }
     & > img { width: 100%; height: 370px;}
 }
