--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/InfoUser/InfoUser.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/InfoUser/InfoUser.scss
@@ -1,7 +1,7 @@
 @import '../../../sass/mixins';
 @import '../../../sass/animations';
 
-.edit-user {
+.info-user {
     padding: 2%;
     background-image: url('../../../image/gemstone-crystal.jpg');
     background-size: cover;
@@ -35,7 +35,19 @@
             }
 
             & > button {
-                @include edit-button;
+                cursor: pointer;
+                background: none;
+                outline: none;
+                border: none;
+                color: #F73F34;
+                font-weight: bold;
+                font-size: 20px;
+                text-shadow: 1px 1px rgb(0,0,0);
+                border-bottom: 1px solid #F73F34;
+                &:hover { 
+                    color: #fff; 
+                    border-color: #FFF;
+                }
             }
         }
 
@@ -99,20 +111,67 @@
     }
 }
 
-@media screen and (max-width: 550px) {
-    .edit-user {
-        & > .inner-edit-user {
-            width: 95%;
+@media screen and (max-width: 1360px) {
+    .info-user {
+        & > .inner-info-user {
+            width: 96%;
+            padding: 3%;
         }
     }
 }
 
-@media screen and (max-width: 250px) {
-    .edit-user {
-        & > .inner-edit-user {
-            width: 95%;
-            & > form > span > .edit-user {
-                width: 60%;
+@media screen and (max-width: 1100px) {
+    .info-user {
+        & > .inner-info-user {
+            width: 96%;
+            padding: 3%;
+            & > .info {
+                & > .main-info > p,
+                & > .advanced-info > p { font-size: 16px; }
+            }
+        }
+    }
+}
+
+
+@media screen and (max-width: 850px) {
+    .info-user {
+        & > .inner-info-user {
+            & > .info {
+                padding: 3% 0;
+                & > .main-info,
+                & > .advanced-info {
+                    flex-direction: column;
+                    & > p { margin: 2% auto; }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 540px) {
+    .info-user {
+        & > .inner-info-user {
+            & > #accordion {
+                width: 97%;
+                & > .card > .card-body {
+                    width: 97%;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 430px) {
+    .info-user {
+        & > .inner-info-user {
+            & > #accordion {
+                & > .card > .card-body {
+                    & > form > .row {
+                        flex-direction: column;
+                        & > input { width: 100%; }
+                    }
+                }
             }
         }
     }
