--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/AdminOptions/UsersTable.scss
@@ -7,6 +7,7 @@
     margin: 0 auto;
 
     & > tbody > tr > td > .info-user {
+        background: none;
         margin-right: 0.7rem;
         font-size: 20px;
         text-decoration: none;
