--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/SignIn/SignIn.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/SignIn/SignIn.scss
@@ -26,18 +26,20 @@
             padding: 5%;
 
             & > h2 { 
-                margin: 5% 0 20% 0;
+                margin: 5% 0 15% 0;
                 font-weight: bold;
                 color: #fff;
                 text-shadow: 1px 1px 1px rgb(21,140,186);
             }
             & > form {
-                    width: 80%;
+                    width: 100%;
                     margin: 0 auto;
 
                     & > .form-group { 
+                        width: 70%;
                         display: flex;
                         flex-direction: column;
+                        margin: 6% auto;
                         & > label {
                             display: block;
                             text-align: left;
@@ -46,18 +48,18 @@
                             text-transform: uppercase;
                             font-weight: bold;
                             text-shadow: 0.5px 0.5px 0.5px rgb(0,0,0);
-                            padding-left: 4rem;
+                            padding-left: 22%;
                             padding-bottom: 2%;
                             margin: 0;
                         }
 
                         & > span {
+                            width: 100%;
                             display: flex;
+                            justify-content: center;
                             &:focus + .pass { color: #158CBA; }
     
                             & > input { 
-                                width: 80%;
-                                margin-left: 15%; 
                                 z-index: 9999;
     
                                 //focus placeholder for Chrome
@@ -83,6 +85,9 @@
     
                             & > .pass,
                             & > .email-login {  position: relative; right: 88%; }
+
+                            & > #username { margin-left: 20%; width: 73%; }
+                            & > #password { margin-left: 20%; width: 72%; }
                         }
 
                         & > #signIn {
@@ -92,7 +97,7 @@
                             width: 7rem;
                             background: rgb(21,140,186);
                             border: 1px solid #fff;
-                            margin: 5% auto;
+                            margin: 3% auto;
                             border-radius: 0.5rem;
                             padding: 0.5rem 1.5rem;
                             font-weight: bold;
@@ -136,10 +141,11 @@
                & > h2 { font-size: 24px; }
                & > form {
                     .form-group { 
+                        width: 100%;
                         font-size: 14px; 
                         & label { 
                             font-size: 12px; 
-                            padding-left: 2rem;
+                            padding-left: 22%;
                         }
                     }
 
@@ -150,12 +156,44 @@
     }
 }
 
-@media screen and (max-width: 160px) {
+@media screen and (max-width: 300px) {
     #signIn {
-        & > section & > .signInForm & > form > .form-group > #signIn {
-                    width: 90%;
-                    font-size: 10px;
-                    padding: 10% 20%;
+        & > section {
+           & > .signInForm {
+               & > h2 { font-size: 24px; }
+               & > form {
+                    & > .form-group { 
+                        & > label { padding-left: 0; text-align: center; }
+                        & > span {
+                            display: block;
+                            & > #username,
+                            & > #password {  width: 80%; margin: 0 auto; }
+                            svg { opacity: 0; }
+                        } 
+                    }
+
+                    & .no-account > a { font-size: 12px; }
+               }
+           }
+        }
+    }
+}
+
+@media screen and (max-width: 170px) {
+    #signIn {
+        & > section {
+           & > .signInForm {
+               & > h2 { font-size: 24px; }
+               & > form {
+                    & > .form-group { 
+                       & > #signIn { 
+                           width:  90%; 
+                           font-size: 14px;
+                           padding: 8% 11%;
+                        }
+                    }
+               }
+           }
         }
     }
 }
