--- a/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/SignUp/SignUp.scss
+++ b/React JS Defense - 15 July 2018/Free Gems Catalog/src/components/shared-components/SignUp/SignUp.scss
@@ -1,7 +1,7 @@
 @import '../../../sass/mixins';
 @import '../../../sass/animations';
 
-#signUp {
+.signUp {
     background-image: url('../../../image/gemstone-crystal.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -115,6 +115,82 @@
                         text-shadow: 0.5px 0.5px 0.5px rgb(255,255,255);
                     }
                 } 
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    .signUp {
+        & > section {
+            width: 96%;
+        }
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .signUp {
+        & > section {
+            & > .signUpForm > form > .row {
+                flex-direction: column;
+                & > .form-group { width: 60%; margin: 2% auto; }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .signUp {
+        & > section {
+            flex-direction: column;
+            & > .logoForm,
+            & > .signUpForm {
+               width: 100%;
+            }
+
+            & > .logoForm {
+                height: 400px;
+                border-bottom: 2px solid rgb(21,140,186);
+                & > span { opacity: 0; }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .signUp {
+        & > section {
+            & > .signUpForm {
+                overflow: hidden;
+                & > form > .row { 
+                   width: 90%; 
+                   margin: 0 auto;
+                   overflow: hidden;
+                   & > .form-group { 
+                       width: 100%; 
+                       overflow: hidden;
+                       & > label { font-size: 12px; }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 300px) {
+    .signUp {
+        & > section {
+            width: 100%;
+            & > .signUpForm {
+                overflow: hidden;
+                & > form > .row { 
+                   width: 96%; 
+                   margin: 0 auto;
+                   overflow: hidden;
+                   & > .form-group { 
+                       & > label { font-size: 12px; }
+                    }
+                }
             }
         }
     }
